--- a/css/master.css
+++ b/css/master.css
@@ -1,7 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap');
-:root {
-  --pale-blue: hsl(225, 100%, 94%);
-}
 * {
   margin: 0;
   padding: 0;
@@ -9,13 +6,14 @@
 body {
   font-family: "Red Hat Display";
   color: hsl(224, 23%, 55%);
+  background-color: hsl(225, 100%, 94%);
   background-image: url("../images/pattern-background-desktop.svg");
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
 }
 .content {
-  height: calc(100% - 30px);
+  height: 100%;
   width: 100%;
   position: absolute;
   display: flex;
@@ -84,10 +82,10 @@ button {
   font-family: inherit;
   color: inherit;
 }
-.plan-button-container button {
+.change {
   color: hsl(245, 75%, 52%);
 }
-.plan-button-container button:active {
+.change:active {
   color: hsl(245, 40%, 52%);
 }
 .confirmation {
@@ -118,10 +116,6 @@ button {
   display: block;
   margin: 30px auto;
 }
-.attribution {
-  position: fixed;
-  bottom: 0;
-}
 
 @media only screen and (max-width: 420px) {
   .order-summary-card {
@@ -138,8 +132,5 @@ button {
   }
   .plan-detail {
     width: 80%;
-  }
-  .attribution {
-    width: 250px;
   }
 }
